--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,10 @@ test:
   timeout: 5000
 
 production:
-  adapter: pg
-  database: sidewalk_hazard
+  adapter: mysql2
   pool: 5
   timeout: 5000
+  database: <%=ENV['OPENSHIFT_APP_NAME']%>
+  username: <%=ENV['OPENSHIFT_DB_USERNAME']%>
+  password: <%=ENV['OPENSHIFT_DB_PASSWORD']%>
+  socket:   <%=ENV['OPENSHIFT_DB_SOCKET']%>
