--- a/config/database.yml
+++ b/config/database.yml
@@ -26,5 +26,5 @@ production:
   database: <%=ENV['OPENSHIFT_APP_NAME']%>
   username: <%=ENV['OPENSHIFT_DB_USERNAME']%>
   password: <%=ENV['OPENSHIFT_DB_PASSWORD']%>
-  host:   <%=ENV['OPENSHIFTMYSQL_DB_HOST']%>
-  port: <%=ENV['OPENSHIFTMYSQL_DB_PORT']%>
+  host:   <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
+  port: <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
