--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ production:
   timeout: 5000
   # mysql://$OPENSHIFT_MYSQL_DB_HOST:$OPENSHIFT_MYSQL_DB_PORT
   database: <%=ENV['OPENSHIFT_APP_NAME']%>
-  username: <%=ENV['OPENSHIFT_DB_USERNAME']%>
-  password: <%=ENV['OPENSHIFT_DB_PASSWORD']%>
+  username: <%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>
+  password: <%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>
   host:   <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
   port: <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
